--- a/sass/_inputfields.scss
+++ b/sass/_inputfields.scss
@@ -14,6 +14,7 @@
 	border-width: 0 0 var(--input-border-bottom) 0;
 	border-style:solid;
 	border-color:rgba(0,0,0,0.1);
+	caret-color:var(--main-color);
 	transition: 0.2s border-bottom-color;
 
 	&:focus{
@@ -431,8 +432,7 @@ input[type="number"]{
 	&:not(.no-buttons)::-webkit-inner-spin-button,
 	&:not(.no-buttons)::-webkit-outer-spin-button{
 		height: 2.5rem;
-		width:2.5rem;
-		background:var(--main-color);
+		cursor:pointer;
 	}	
 	&.no-buttons{
 		-moz-appearance: textfield;
@@ -545,10 +545,10 @@ input[type="color"]{
 	display: grid;
 	grid-template-columns: min-content auto;
 
-	input{
+	>input{
 		border-top-left-radius:0;
 	}
-	:first-child:not(input):not(button):not(.button):not(.inputLabel){
+	>:first-child:not(input):not(button):not(.button):not(.inputLabel){
 		border-bottom: 2px solid rgba(0,0,0,0.1);
 		background: rgba(0,0,0,0.05);
 		height:2.5rem;
@@ -560,11 +560,11 @@ input[type="color"]{
 		font-size: 1.5rem;
 		transition: 0.2s border-bottom-color;
 	}
-	button:first-child,
-	input[type="button"]:first-child,
-	input[type="reset"]:first-child,
-	input[type="submit"]:first-child,
-	.button:first-child{
+	>button:first-child,
+	>input[type="button"]:first-child,
+	>input[type="reset"]:first-child,
+	>input[type="submit"]:first-child,
+	>.button:first-child{
 		margin-top: 0.75rem;
 		height:2.5rem;
 		border-top-right-radius:0;
@@ -582,21 +582,25 @@ input[type="color"]{
 	display: grid;
 	grid-template-columns: auto min-content;
 
-	input{
+	&.tagLeft{
+		grid-template-columns: min-content auto min-content;
+	}
+
+	>input{
 		border-top-right-radius: 0;
 	}
 
-	button:last-child,
-	input[type="button"]:last-child,
-	input[type="reset"]:last-child,
-	input[type="submit"]:last-child,
-	.button:last-child{
+	>button:last-child,
+	>input[type="button"]:last-child,
+	>input[type="reset"]:last-child,
+	>input[type="submit"]:last-child,
+	>.button:last-child{
 		margin-top: 0.75rem;
 		height:2.5rem;
 		border-top-left-radius:0;
 		border-bottom-left-radius:0;
 	}
-	:last-child:not(input):not(button):not(.button):not(.inputLabel){
+	>:last-child:not(input):not(button):not(.button):not(.inputLabel){
 		border-bottom: 2px solid rgba(0,0,0,0.1);
 		background: rgba(0,0,0,0.05);
 		height:2.5rem;
