--- a/jammer.css
+++ b/jammer.css
@@ -567,6 +567,7 @@ input[type=checkbox] + .check {
   height: 1.15rem;
   width: 1.15rem;
   border: 2px solid rgba(0, 0, 0, 0.33);
+  border-radius: 2px;
   vertical-align: middle;
   position: relative;
 }
@@ -592,32 +593,43 @@ input[type=checkbox] + .switch {
   line-height: 1;
   height: 1rem;
   width: 2rem;
-  outline: 2px solid var(--main-color);
   background: var(--main-text-cl);
   vertical-align: middle;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--main-color);
+  margin-left: 50%;
+  transform: translateX(-50%);
 }
 input[type=checkbox] + .switch::after {
   display: inline-block;
   content: "";
   line-height: 1;
-  width: 0.7rem;
-  height: 1rem;
+  width: 0.8rem;
+  height: 0.8rem;
   background: var(--main-color);
-  outline: 0.1rem solid var(--main-color-lighter);
+  border-radius: 50%;
   transition: 0.1s transform ease-out;
 }
 input[type=checkbox] + .switch + .inputLabel {
+  position: absolute;
+  left: 0;
+  opacity: 0.75;
+  transition: 0.2s left ease-out, 0.2s opacity ease-out;
+}
+input[type=checkbox] + .switch + .inputLabel + .inputLabel {
+  position: absolute;
+  right: 0;
   font-weight: 500;
   border-bottom: 2px solid transparent;
-  transition: color 0.2s ease-out, border-bottom-color 0.2s ease-out;
+  transition: 0.2s right ease-out, 0.2s opacity ease-out, color 0.2s ease-out, border-bottom-color 0.2s ease-out;
 }
 input[type=checkbox]:checked + .switch {
   background-color: var(--main-color-lighter);
 }
 input[type=checkbox]:checked + .switch::after {
-  transform: translate(1.3rem, 0);
+  transform: translate(0.93rem, 0);
 }
-input[type=checkbox]:checked + .switch + .inputLabel {
+input[type=checkbox]:checked + .switch + .inputLabel + .inputLabel {
   color: var(--main-color);
   border-bottom-color: var(--main-color);
 }
@@ -668,7 +680,7 @@ input[type=radio] + .radio + .inputLabel {
   transition: color 0.2s ease-out, border-bottom-color 0.2s ease-out;
 }
 input[type=radio]:checked + .radio {
-  background: var(--main-color-lighter);
+  background: radial-gradient(var(--main-color-lighter), var(--main-color-lighter) 0.25rem, var(--main-color) 0.3rem, var(--main-color));
   border-color: var(--main-color);
 }
 input[type=radio]:checked + .radio + .inputLabel {
@@ -941,6 +953,15 @@ input[type=text] + .inputLabel + .showPwd {
   color: var(--main-text-cl);
 }
 
+input[type=checkbox]:checked + .switch + .inputLabel {
+  left: 50%;
+  opacity: 0;
+}
+input[type=checkbox]:not(:checked) + .switch + .inputLabel + .inputLabel {
+  right: 50%;
+  opacity: 0;
+}
+
 [hidden], .hidden {
   display: none !important;
 }
@@ -1061,24 +1082,20 @@ input[type=text] + .inputLabel + .showPwd {
   margin-left: 100%;
 }
 
-.p10 {
-  padding: 10px;
+.p8 {
+  padding: 8px !important;
 }
 
-.p20 {
-  padding: 20px;
+.p16 {
+  padding: 16px !important;
 }
 
-.p30 {
-  padding: 30px;
+.p32 {
+  padding: 32px !important;
 }
 
-.p40 {
-  padding: 40px;
-}
-
-.p50 {
-  padding: 50px;
+.p64 {
+  padding: 64px !important;
 }
 
 .cols2, .cols3, .cols4, .cols5, .cols6 {
@@ -1137,6 +1154,26 @@ input[type=text] + .inputLabel + .showPwd {
 
 .shadow7 {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1), 0 32px 32px rgba(0, 0, 0, 0.1), 0 64px 64px rgba(0, 0, 0, 0.1);
+}
+
+.gridHelper::after {
+  content: "64px squares delimited by 8px padding bands";
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(90deg, rgba(255, 0, 255, 0.2) 0, rgba(255, 0, 255, 0.2) 8px, transparent 8px, transparent 80px), repeating-linear-gradient(0deg, rgba(0, 0, 255, 0.2) 0, rgba(0, 0, 255, 0.2) 8px, transparent 8px, transparent 80px);
+  z-index: -1;
+  padding-top: calc( 100vh - 1rem );
+  /* vertical-align: 55px; */
+  font-size: 0.75rem;
+  font-family: monospace;
+  text-align: right;
+  font-weight: bold;
+  letter-spacing: -1px;
+  padding-right: 24px;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .app_header {
