--- a/jammer.strippeddown.css
+++ b/jammer.strippeddown.css
@@ -1,22 +1,4 @@
 @charset "UTF-8";
-/* latin-ext */
-@font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/opensans/v16/mem8YaGs126MiZpBA-UFW50bbck.woff2) format("woff2");
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/opensans/v16/mem8YaGs126MiZpBA-UFVZ0b.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
 body {
   --background-base: #fff;
   --background-base-darker: #f9f9f9;
@@ -965,711 +947,4 @@ input[type=checkbox]:not(:checked) + .switch + .inputLabel + .inputLabel {
   opacity: 0;
 }
 
-[hidden], .hidden {
-  display: none !important;
-}
-
-.text-left {
-  text-align: left !important;
-}
-
-.text-center {
-  text-align: center !important;
-}
-
-.text-right {
-  text-align: right !important;
-}
-
-.pull-left {
-  float: left !important;
-}
-
-.pull-right {
-  float: right !important;
-}
-
-.w1 {
-  width: 100%/12;
-}
-
-.w2 {
-  width: 100%/6;
-}
-
-.w3 {
-  width: 25%;
-}
-
-.w4 {
-  width: 100%/3;
-}
-
-.w5 {
-  width: 41.6666666667%;
-}
-
-.w6 {
-  width: 50%;
-}
-
-.w7 {
-  width: 58.3333333333%;
-}
-
-.w8 {
-  width: 66.6666666667%;
-}
-
-.w9 {
-  width: 75%;
-}
-
-.w10 {
-  width: 83.3333333333%;
-}
-
-.w11 {
-  width: 91.6666666667%;
-}
-
-.w12 {
-  width: 100%;
-}
-
-.m1 {
-  margin-left: 8.333333%;
-}
-
-.m2 {
-  margin-left: 16.666667%;
-}
-
-.m3 {
-  margin-left: 25%;
-}
-
-.m4 {
-  margin-left: 33.333333%;
-}
-
-.m5 {
-  margin-left: 41.6666666667%;
-}
-
-.m6 {
-  margin-left: 50%;
-}
-
-.m7 {
-  margin-left: 58.3333333333%;
-}
-
-.m8 {
-  margin-left: 66.6666666667%;
-}
-
-.m9 {
-  margin-left: 75%;
-}
-
-.m10 {
-  margin-left: 83.3333333333%;
-}
-
-.m11 {
-  margin-left: 91.6666666667%;
-}
-
-.m12 {
-  margin-left: 100%;
-}
-
-.p8 {
-  padding: 8px !important;
-}
-
-.p16 {
-  padding: 16px !important;
-}
-
-.p32 {
-  padding: 32px !important;
-}
-
-.p64 {
-  padding: 64px !important;
-}
-
-.cols2, .cols3, .cols4, .cols5, .cols6 {
-  display: grid;
-  grid-gap: 0.715rem;
-  padding: 0.715rem;
-}
-
-.cols2 {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.cols3 {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.cols4 {
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.cols5 {
-  grid-template-columns: repeat(5, 1fr);
-}
-
-.cols6 {
-  grid-template-columns: repeat(6, 1fr);
-}
-
-.cols2 > *, .cols3 > *, .cols4 > *, .cols5 > *, .cols6 > * {
-  overflow: hidden;
-}
-
-.shadow1 {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-}
-
-.shadow2 {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1);
-}
-
-.shadow3 {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1);
-}
-
-.shadow4 {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1);
-}
-
-.shadow5 {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
-}
-
-.shadow6 {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1), 0 32px 32px rgba(0, 0, 0, 0.1);
-}
-
-.shadow7 {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1), 0 32px 32px rgba(0, 0, 0, 0.1), 0 64px 64px rgba(0, 0, 0, 0.1);
-}
-
-.gridHelper::after {
-  content: "64px squares delimited by 8px padding bands";
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: repeating-linear-gradient(90deg, rgba(255, 0, 255, 0.2) 0, rgba(255, 0, 255, 0.2) 8px, transparent 8px, transparent 80px), repeating-linear-gradient(0deg, rgba(0, 0, 255, 0.2) 0, rgba(0, 0, 255, 0.2) 8px, transparent 8px, transparent 80px);
-  z-index: -1;
-  padding-top: calc( 100vh - 1rem );
-  /* vertical-align: 55px; */
-  font-size: 0.75rem;
-  font-family: monospace;
-  text-align: right;
-  font-weight: bold;
-  letter-spacing: -1px;
-  padding-right: 24px;
-  color: rgba(0, 0, 0, 0.5);
-}
-
-.app_header {
-  position: sticky;
-  z-index: 9999999;
-  top: 0;
-  width: 100%;
-  height: 4rem;
-  background: var(--main-color);
-  color: var(--main-text-cl);
-  display: grid;
-  grid-template-columns: 4rem auto 4rem;
-  padding: 0 1rem;
-}
-.app_header * {
-  overflow: hidden;
-}
-.app_header *.app-menu-btn {
-  cursor: pointer;
-  display: block;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-.app_header *.app-menu-btn::after {
-  content: "";
-  display: block;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: var(--main-text-cl);
-  clip-path: polygon(10% 30%, 90% 30%, 90% 35%, 10% 35%, 10% 50%, 90% 50%, 90% 55%, 10% 55%, 10% 70%, 90% 70%, 90% 75%, 10% 75%);
-}
-.app_header *.app-menu-btn:active::after {
-  opacity: 0.5;
-}
-
-.box-alert, .box-warning, .box-success, .box-info {
-  display: block;
-  margin: 0.5rem 1rem 0.5rem 1rem;
-  padding: 0 1rem 0.75rem 1rem;
-  border: 1px solid transparent;
-  border-radius: 2px;
-  min-height: 2.15rem;
-  cursor: default;
-}
-.box-alert::before, .box-warning::before, .box-success::before, .box-info::before {
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 30px;
-  min-height: 30px;
-  width: 30px;
-  font-size: 20px;
-  font-family: monospace;
-  border-bottom-right-radius: 3px;
-  font-weight: bold;
-  margin-left: -1rem;
-}
-
-.box-info {
-  background-color: var(--info-lighter);
-  color: var(--info);
-  border-color: var(--info);
-}
-
-.box-success {
-  background-color: var(--success-lighter);
-  color: var(--success);
-  border-color: var(--success);
-}
-
-.box-warning {
-  background-color: var(--warning-lighter);
-  color: var(--warning);
-  border-color: var(--warning);
-}
-
-.box-alert {
-  background-color: var(--alert-lighter);
-  color: var(--alert);
-  border-color: var(--alert);
-}
-
-.box-info::before {
-  content: "?";
-  background: var(--info);
-  color: var(--info-lighter);
-}
-
-.box-success::before {
-  content: "✓";
-  background: var(--success);
-  color: var(--success-lighter);
-}
-
-.box-warning::before {
-  content: "!";
-  background: var(--warning);
-  color: var(--warning-lighter);
-}
-
-.box-alert::before {
-  content: "×";
-  background: var(--alert);
-  color: var(--alert-lighter);
-}
-
-.box-info button {
-  background: var(--info);
-}
-
-.box-success button {
-  background: var(--success);
-}
-
-.box-warning button {
-  background: var(--warning);
-}
-
-.box-alert button {
-  background: var(--alert);
-}
-
-.text-info,
-.text-success,
-.text-warning,
-.text-alert,
-.text-main {
-  display: inline-block;
-}
-
-.text-info {
-  color: var(--info);
-}
-
-.text-success {
-  color: var(--success);
-}
-
-.text-warning {
-  color: var(--warning);
-}
-
-.text-alert {
-  color: var(--alert);
-}
-
-.text-main {
-  color: var(--main-color);
-}
-
-.fill-info {
-  background-color: var(--info) !important;
-  color: var(--info-lighter) !important;
-}
-
-.fill-success {
-  background-color: var(--success) !important;
-  color: var(--success-lighter) !important;
-}
-
-.fill-warning {
-  background-color: var(--warning) !important;
-  color: var(--warning-lighter) !important;
-}
-
-.fill-alert {
-  background-color: var(--alert) !important;
-  color: var(--alert-lighter) !important;
-}
-
-.fill-main {
-  background-color: var(--main-color) !important;
-  color: var(--main-text-cl) !important;
-}
-
-.tag-main, .tag-alert, .tag-warning, .tag-success, .tag-info {
-  line-height: 1;
-  padding: 1px 3px 3px 3px;
-  font-size: 75%;
-  border-radius: 3px;
-  margin: 0.25rem 0.1rem;
-  font-weight: bold;
-}
-.tag-main::before, .tag-alert::before, .tag-warning::before, .tag-success::before, .tag-info::before {
-  content: "#";
-}
-
-.tag-info {
-  color: var(--info-lighter);
-  background: var(--info);
-}
-
-.tag-success {
-  color: var(--success-lighter);
-  background: var(--success);
-}
-
-.tag-warning {
-  color: var(--warning-lighter);
-  background: var(--warning);
-}
-
-.tag-alert {
-  color: var(--alert-lighter);
-  background: var(--alert);
-}
-
-.tag-main {
-  color: var(--main-text-cl);
-  background: var(--main-color);
-}
-
-.card {
-  border-top: 1px solid rgba(0, 0, 0, 0.075);
-  border-radius: 0.75em;
-  margin-top: 1.5em;
-  padding: 0;
-  /*box-shadow: 0 0.75em 0.5em rgba(0,0,0,0.175);*/
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11), 0 4px 4px rgba(0, 0, 0, 0.11), 0 8px 8px rgba(0, 0, 0, 0.11), 0 16px 16px rgba(0, 0, 0, 0.11);
-  background: var(--background-base);
-  color: var(--text-base);
-  display: grid;
-  overflow: hidden;
-}
-.card .card_title {
-  font-weight: 100;
-  background: var(--main-color);
-  color: var(--main-text-cl);
-  width: 100%;
-  line-height: 1;
-  padding: 10px;
-  border-radius: 0 0 2px 2px;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
-  font-size: 22px;
-  text-align: center;
-  margin: 0;
-  grid-row-start: 2;
-  opacity: 0.85;
-}
-.card .card_content {
-  padding: 0.5em;
-  padding-bottom: 1.5em;
-  border-left: 1px solid rgba(0, 0, 0, 0.1);
-  border-right: 1px solid rgba(0, 0, 0, 0.1);
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.card .card_content img:first-child {
-  border-radius: 3px 3px 0 0;
-}
-.card .card_content article {
-  font-style: italic;
-  margin-top: 0.75rem;
-}
-
-.codeArea, code {
-  font-family: monospace, monospace;
-  font-size: 1rem;
-  letter-spacing: -1px;
-}
-
-code {
-  display: inline-block;
-}
-
-.codeArea {
-  display: block;
-  background: rgba(0, 0, 0, 0.1);
-  border-left: 3px solid var(--main-color);
-  counter-reset: codeArea;
-}
-.codeArea .row {
-  counter-increment: codeArea;
-  display: block;
-  width: 100%;
-  height: 1.15rem;
-  white-space: pre-wrap;
-}
-.codeArea .row .comment {
-  opacity: 0.5;
-}
-.codeArea .row::before {
-  content: counter(codeArea);
-  width: 1rem;
-  display: inline-block;
-  height: 1.15rem;
-  background: rgba(0, 0, 0, 0.1);
-  text-align: center;
-  line-height: 1.15rem;
-  font-size: 10px;
-  font-weight: bold;
-  color: rgba(0, 0, 0, 0.35);
-}
-
-.pwa_dialog_backDrop {
-  position: fixed;
-  z-index: 2000000000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(2px);
-}
-
-body.dark-mode .pwa_dialog_backDrop {
-  background: rgba(255, 255, 255, 0.1);
-}
-
-@media (prefers-color-scheme: dark) {
-  .pwa_dialog_backDrop {
-    background: rgba(255, 255, 255, 0.1);
-  }
-}
-.pwa_dialog {
-  position: fixed;
-  z-index: 2000000001;
-  left: 50%;
-  top: 50%;
-  width: 85%;
-  max-height: 85%;
-  transform: translate(-50%, -50%);
-  border-radius: 3px;
-  background: var(--background-base);
-  color: var(--text-base);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11), 0 4px 4px rgba(0, 0, 0, 0.11), 0 8px 8px rgba(0, 0, 0, 0.11), 0 16px 16px rgba(0, 0, 0, 0.11), 0 32px 32px rgba(0, 0, 0, 0.11);
-}
-.pwa_dialog .pwa_dialog_topBar {
-  height: 30px;
-  display: grid;
-  grid-template-columns: auto 50px;
-}
-.pwa_dialog .pwa_dialog_topBar .pwa_dialog_title {
-  padding-top: 10px;
-  padding-left: 10px;
-  text-transform: capitalize;
-  font-weight: bold;
-  cursor: default;
-}
-.pwa_dialog .pwa_dialog_topBar .pwa_dialog_topBtns .pwa_dialog_topCross {
-  width: 50px;
-  height: 50px;
-  font-size: 30px;
-  text-align: center;
-  line-height: 50px;
-  background: var(--background-base-darker);
-  border-bottom-left-radius: 20px;
-  cursor: pointer;
-}
-.pwa_dialog .pwa_dialog_topBar .pwa_dialog_topBtns .pwa_dialog_topCross::after {
-  content: "×";
-}
-.pwa_dialog .pwa_dialog_topBar .pwa_dialog_topBtns .pwa_dialog_topCross:active {
-  background: var(--background-base);
-}
-.pwa_dialog .pwa_dialog_body {
-  margin-top: 20px;
-  padding: 10px;
-}
-
-.pwa_notif {
-  position: fixed;
-  max-width: 90%;
-  background: linear-gradient(45deg, var(--main-color), var(--main-color-lighter));
-  color: var(--main-text-cl);
-  min-width: 15rem;
-  border-radius: 3px;
-  overflow: hidden;
-  display: grid;
-  grid-template-rows: min-content auto;
-  grid-gap: 0.17rem;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11), 0 4px 4px rgba(0, 0, 0, 0.11), 0 8px 8px rgba(0, 0, 0, 0.11);
-}
-.pwa_notif.notif_top {
-  top: 5rem;
-}
-.pwa_notif.notif_bottom {
-  bottom: 5rem;
-}
-.pwa_notif.notif_vertCenter {
-  top: 50%;
-  transform: translateY(-50%);
-}
-.pwa_notif.notif_right {
-  right: 3rem;
-}
-.pwa_notif.notif_left {
-  left: 3rem;
-}
-.pwa_notif.notif_horizCenter {
-  left: 50%;
-  transform: translateX(-50%);
-}
-.pwa_notif .pwa_notif_head {
-  display: grid;
-  grid-template-columns: auto min-content;
-}
-.pwa_notif .pwa_notif_head .pwa_notif_title {
-  font-weight: bold;
-  line-height: 1;
-  padding: 0.33rem;
-}
-.pwa_notif .pwa_notif_head .pwa_notif_close {
-  font-size: 1.5rem;
-  display: block;
-  width: 1.5rem;
-  height: 1.5rem;
-  text-align: center;
-  line-height: 1.5rem;
-  cursor: pointer;
-  border-radius: 50%;
-  transition: 0.2s background-color ease-out;
-}
-.pwa_notif .pwa_notif_head .pwa_notif_close::after {
-  content: "×";
-}
-.pwa_notif .pwa_notif_head .pwa_notif_close:hover {
-  background: rgba(0, 0, 0, 0.1);
-}
-.pwa_notif .pwa_notif_body {
-  padding: 0 0.5rem 0.5rem 0.33rem;
-  font-style: italic;
-}
-
-.number-tip {
-  display: inline-block;
-  line-height: 1rem;
-  background: var(--info) linear-gradient(45deg, rgba(0, 0, 0, 0.1), transparent);
-  color: var(--info-lighter);
-  font-weight: bold;
-  text-align: center;
-  border-radius: 50%;
-  font-size: 0.75rem;
-  vertical-align: 0.1rem;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11), 0 4px 4px rgba(0, 0, 0, 0.11);
-  padding: 0.075rem 0.25rem;
-  min-width: 1.1rem;
-  overflow: hidden;
-}
-
-.message {
-  background: var(--button-greyedout);
-  padding: 0.5rem;
-  border-radius: 1rem;
-  display: block;
-  margin: 3px 0.5rem 0 0.5rem;
-}
-.message.pull-left {
-  clear: both;
-  border-radius: 3px 1rem 1rem 3px;
-}
-.message.pull-left:first-child:not(:last-child) {
-  border-top-left-radius: 1rem;
-}
-.message.pull-left:last-child:not(:first-child) {
-  border-bottom-left-radius: 1rem;
-}
-.message.pull-right {
-  clear: both;
-  border-radius: 1rem 3px 3px 1rem;
-}
-.message.pull-right:first-child:not(:last-child) {
-  border-top-right-radius: 1rem;
-}
-.message.pull-right:last-child:not(:first-child) {
-  border-bottom-right-radius: 1rem;
-}
-
-@keyframes jammer_spin {
-  to {
-    transform: rotate(-360deg);
-  }
-}
-.spin1 {
-  animation-name: jammer_spin;
-  animation-duration: 0.5s;
-  animation-timing-function: ease-out;
-  animation-iteration-count: infinite;
-  animation-play-state: running;
-}
-
-.spin1 {
-  display: inline-block;
-  height: 1.25em;
-  width: 1.25em;
-  border-radius: 50%;
-  background: transparent;
-}
-
-.spin1 {
-  border: 0.15em solid var(--main-color);
-  border-top-color: transparent;
-}
-
-/*# sourceMappingURL=jammer.css.map */
+/*# sourceMappingURL=jammer.strippeddown.css.map */
