--- a/jammer.css
+++ b/jammer.css
@@ -1651,25 +1651,75 @@ body.dark-mode .pwa_dialog_backDrop {
     transform: rotate(-360deg);
   }
 }
-.spin1 {
+.spin6, .spin5, .spin4, .spin3, .spin2, .spin1 {
   animation-name: jammer_spin;
-  animation-duration: 0.5s;
+  animation-duration: 0.65s;
   animation-timing-function: ease-out;
   animation-iteration-count: infinite;
   animation-play-state: running;
 }
 
-.spin1 {
+.spin6, .spin5, .spin4, .spin3, .spin2, .spin1 {
   display: inline-block;
   height: 1.25em;
   width: 1.25em;
   border-radius: 50%;
   background: transparent;
+  font-size: inherit;
+  overflow: hidden;
+  position: relative;
 }
 
 .spin1 {
   border: 0.15em solid var(--main-color);
   border-top-color: transparent;
+}
+
+.spin2 {
+  background-image: conic-gradient(transparent, var(--background-base)), radial-gradient(transparent, transparent 50%, var(--main-color) 52%, var(--main-color));
+}
+
+.spin3 {
+  border: 0.15em dashed var(--main-color);
+}
+
+.spin4 {
+  background-image: conic-gradient(transparent, var(--background-base)), radial-gradient(transparent, transparent 50%, var(--main-color) 52%, var(--main-color));
+  overflow: visible;
+}
+.spin4::after {
+  content: "";
+  width: 0.35em;
+  height: 0.35em;
+  display: inline-block;
+  position: absolute;
+  left: 50%;
+  top: 0.075em;
+  background: var(--main-color);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.spin5 {
+  animation-timing-function: linear;
+}
+.spin5::after {
+  content: "×";
+  display: block;
+  width: 100%;
+  text-align: center;
+  height: 1rem;
+  line-height: 1rem;
+  font-size: 1.5em;
+  color: var(--main-color);
+  font-weight: bold;
+}
+
+.spin6 {
+  border: 0.15em solid var(--main-color);
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  animation-timing-function: ease;
 }
 
 /*# sourceMappingURL=jammer.css.map */
