--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -477,7 +477,7 @@ body.dark-mode{
 }
 %rotating{
 	animation-name: jammer_spin;
-	animation-duration: 0.5s;
+	animation-duration: 0.65s;
 	animation-timing-function: ease-out;
 	animation-iteration-count: infinite;
 	animation-play-state: running;	
@@ -489,9 +489,64 @@ body.dark-mode{
 	width:1.25em;
 	border-radius: 50%;
 	background:transparent;
+	font-size:inherit;
+	overflow:hidden;
+	position:relative;
 }
 .spin1{
 	@extend %spinner;
 	border:0.15em solid var(--main-color);
 	border-top-color:transparent;
+}
+.spin2{
+	@extend %spinner;
+	background-image: conic-gradient( transparent, var(--background-base)), 
+					  radial-gradient( transparent, transparent 50%,var(--main-color) 52%, var(--main-color));
+}
+.spin3{
+	@extend %spinner;
+	border:0.15em dashed var(--main-color);
+}
+.spin4{
+	@extend %spinner;
+	background-image: conic-gradient( transparent, var(--background-base)), 
+					  radial-gradient( transparent, transparent 50%,var(--main-color) 52%, var(--main-color));
+	overflow:visible;
+
+	&::after{
+		content: '';
+		width: 0.35em;
+		height: 0.35em;
+		display:inline-block;
+		position:absolute;
+		left:50%;
+		top:0.075em;
+		background: var(--main-color);
+		border-radius:50%;
+		transform: translate(-50%,-50%);
+	}
+}
+.spin5{
+	@extend %spinner;
+	animation-timing-function: linear;
+
+	&::after{
+		content: "\00d7";
+		display: block;
+		width: 100%;
+		text-align: center;
+		height: 1rem;
+		line-height: 1rem;
+		font-size: 1.5em;
+		color: var(--main-color);
+		font-weight: bold;
+	}
+}
+
+.spin6{
+	@extend %spinner;
+	border:0.15em solid var(--main-color);
+	border-top-color:transparent;
+	border-bottom-color:transparent;
+	animation-timing-function:ease;
 }
