--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -46,6 +46,7 @@ body{
 
 	/*- other variables -*/
 	--input-border-bottom: 2px;
+	--header-height: 3.5rem;
 }
 
 @media( prefers-color-scheme: dark ){
