--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -3,7 +3,7 @@
 	z-index: 9999999;
 	top: 0;
 	width: 100%;
-	height: 4rem;
+	height: var(--header-height);
 	background: var(--main-color);
 	color: var(--main-text-cl);
 	display: grid;
@@ -43,6 +43,10 @@
 		margin: 0;
 		line-height: 200%;
 	}
+}
+.app-body{
+	position:relative;
+	height: calc( 100vh - var(--header-height) );
 }
 
 %infoboxes{
