--- a/jammer.css
+++ b/jammer.css
@@ -1713,6 +1713,7 @@ body.dark-mode .pwa_dialog_backDrop {
   display: inline-block;
   height: 1.25em;
   width: 1.25em;
+  vertical-align: middle;
   border-radius: 50%;
   background: transparent;
   font-size: inherit;
@@ -1799,6 +1800,70 @@ body.dark-mode .pwa_dialog_backDrop {
 .spin9 {
   animation-timing-function: linear;
   background-image: conic-gradient(var(--main-color-lighter), var(--main-color), var(--main-color-lighter), var(--main-color)), radial-gradient(transparent, transparent 50%, var(--main-color) 52%, var(--main-color));
+}
+
+@keyframes spinBouncing {
+  to {
+    vertical-align: 0.25em;
+    height: 0.5em;
+  }
+}
+.spin10 {
+  display: inline-block;
+  width: 1.25em;
+  height: 1.25em;
+}
+
+.spin10::after {
+  content: "";
+  display: inline-block;
+  width: 0.5em;
+  height: 0.45em;
+  border-radius: 50%;
+  background: var(--main-color);
+  vertical-align: -0.25em;
+  animation-name: spinBouncing;
+  animation-duration: 0.333s;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+  animation-play-state: running;
+}
+
+button:not(.secondary):not([disabled]) .spin1,
+input[type=button]:not(.secondary):not([disabled]) .spin1,
+input[type=reset]:not(.secondary):not([disabled]) .spin1,
+input[type=submit]:not(.secondary):not([disabled]) .spin1,
+.button:not(.secondary):not([disabled]) .spin1 {
+  border-color: transparent var(--main-text-cl) var(--main-text-cl) var(--main-text-cl);
+}
+button:not(.secondary):not([disabled]) .spin3,
+input[type=button]:not(.secondary):not([disabled]) .spin3,
+input[type=reset]:not(.secondary):not([disabled]) .spin3,
+input[type=submit]:not(.secondary):not([disabled]) .spin3,
+.button:not(.secondary):not([disabled]) .spin3 {
+  border-color: var(--main-text-cl);
+}
+button:not(.secondary):not([disabled]) .spin5,
+input[type=button]:not(.secondary):not([disabled]) .spin5,
+input[type=reset]:not(.secondary):not([disabled]) .spin5,
+input[type=submit]:not(.secondary):not([disabled]) .spin5,
+.button:not(.secondary):not([disabled]) .spin5 {
+  color: var(--main-text-cl);
+}
+button:not(.secondary):not([disabled]) .spin6,
+input[type=button]:not(.secondary):not([disabled]) .spin6,
+input[type=reset]:not(.secondary):not([disabled]) .spin6,
+input[type=submit]:not(.secondary):not([disabled]) .spin6,
+.button:not(.secondary):not([disabled]) .spin6 {
+  border-color: transparent var(--main-text-cl) transparent var(--main-text-cl);
+}
+button:not(.secondary):not([disabled]) .spin7,
+input[type=button]:not(.secondary):not([disabled]) .spin7,
+input[type=reset]:not(.secondary):not([disabled]) .spin7,
+input[type=submit]:not(.secondary):not([disabled]) .spin7,
+.button:not(.secondary):not([disabled]) .spin7 {
+  border-color: var(--main-text-cl) var(--main-color-lighter) var(--main-text-cl) var(--main-color-lighter);
 }
 
 /*# sourceMappingURL=jammer.css.map */
