--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -496,6 +496,7 @@ body.dark-mode{
 	display:inline-block;
 	height:1.25em;
 	width:1.25em;
+	vertical-align: middle;
 	border-radius: 50%;
 	background:transparent;
 	font-size:inherit;
@@ -590,4 +591,66 @@ body.dark-mode{
 	animation-timing-function: linear;
 	background-image: conic-gradient(var(--main-color-lighter), var(--main-color),var(--main-color-lighter), var(--main-color)), 
 					  radial-gradient( transparent, transparent 50%,var(--main-color) 52%, var(--main-color));
+}
+@keyframes spinBouncing{
+	to{ vertical-align: 0.25em;height:0.5em; }
+}
+.spin10{
+	display: inline-block;
+	width: 1.25em;
+	height: 1.25em;
+}
+.spin10::after{
+	content: '';
+	display:inline-block;
+	width: 0.5em;
+	height: 0.45em;
+	border-radius: 50%;
+	background:var(--main-color);
+	vertical-align: -0.25em;
+	animation-name: spinBouncing;
+	animation-duration: 0.333s;
+	animation-timing-function: ease;
+	animation-iteration-count: infinite;
+	animation-direction: alternate-reverse;
+	animation-play-state: running;
+}
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"],
+.button{
+	&:not(.secondary):not([disabled]){
+		.spin1{
+			border-color: transparent var(--main-text-cl) var(--main-text-cl) var(--main-text-cl);
+		}
+		.spin2{
+
+		}
+		.spin3{
+			border-color: var(--main-text-cl);
+		}
+		.spin4{
+
+		}
+		.spin5{
+			color: var(--main-text-cl);
+		}
+		.spin6{
+			border-color: transparent var(--main-text-cl) transparent var(--main-text-cl);
+		}
+		.spin7{
+			border-color: var(--main-text-cl) var(--main-color-lighter) var(--main-text-cl) var(--main-color-lighter);
+		}
+		.spin8{
+
+		}
+		.spin9{
+
+		}
+		.spin10{
+
+		}
+	}
 }
