--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,3 +1,5 @@
+@use '_animations';
+
 .app-header{
 	position: sticky;
 	z-index: 9999999;
@@ -481,27 +483,21 @@ body.dark-mode{
 	}
 }
 
-@keyframes jammer_spin{
-	to{ transform: rotate(-360deg); }
-}
-%rotating{
-	animation-name: jammer_spin;
-	animation-duration: 0.65s;
-	animation-timing-function: ease-out;
-	animation-iteration-count: infinite;
-	animation-play-state: running;	
-}
-%spinner{
-	@extend %rotating;
+
+%loadAnim{
 	display:inline-block;
 	height:1.25em;
 	width:1.25em;
 	vertical-align: middle;
-	border-radius: 50%;
 	background:transparent;
 	font-size:inherit;
 	overflow:hidden;
 	position:relative;
+}
+%spinner{
+	@extend %rotating;
+	@extend %loadAnim;
+	border-radius: 50%;
 }
 .spin1{
 	@extend %spinner;
@@ -592,28 +588,74 @@ body.dark-mode{
 	background-image: conic-gradient(var(--main-color-lighter), var(--main-color),var(--main-color-lighter), var(--main-color)), 
 					  radial-gradient( transparent, transparent 50%,var(--main-color) 52%, var(--main-color));
 }
-@keyframes spinBouncing{
-	to{ vertical-align: 0.25em;height:0.5em; }
-}
+
 .spin10{
-	display: inline-block;
-	width: 1.25em;
-	height: 1.25em;
+	@extend %loadAnim;
+
+	&::after{
+		@extend %bouncing;
+		content: '';
+		display:inline-block;
+		width: 0.5em;
+		height: 0.5em;
+		border-radius: 50%;
+		background:var(--main-color);
+		vertical-align: -0.25em;		
+	}
 }
-.spin10::after{
-	content: '';
-	display:inline-block;
-	width: 0.5em;
-	height: 0.45em;
-	border-radius: 50%;
-	background:var(--main-color);
-	vertical-align: -0.25em;
-	animation-name: spinBouncing;
-	animation-duration: 0.333s;
-	animation-timing-function: ease;
-	animation-iteration-count: infinite;
-	animation-direction: alternate-reverse;
-	animation-play-state: running;
+.spin11{
+	@extend %loadAnim;
+	overflow:visible;
+
+	&::after{
+		@extend %sliding;
+		content: '';
+		display:inline-block;
+		width: 0.5em;
+		height: 0.5em;
+		border-radius: 50%;
+		background:var(--main-color);
+	}
+	&::before{
+		@extend %sliding;
+		animation-delay:0.45s;
+		content: '';
+		display:inline-block;
+		width: 0.5em;
+		height: 0.5em;
+		border-radius: 50%;
+		background:var(--main-color-lighter);
+	}
+}
+.spin12{
+	@extend %loadAnim;
+	overflow:visible;
+
+	&::after{
+		@extend %bounceRotating;
+		content: '\2605';
+		position: absolute;
+		bottom: 0;
+		width: 1em;
+		text-align: center;
+		font-size: 1em;
+		left:0;
+		color: var(--main-color);
+		text-shadow: 0 0 0.1em var(--main-color);
+	}
+	&::before{
+		@extend %bounceRotating;
+		animation-delay:0.15s;
+		content: '\2605';
+		position: absolute;
+		bottom: 0;
+		width: 1em;
+		text-align: center;
+		font-size: 1em;
+		right:0;
+		color: var(--main-color-lighter);
+		text-shadow: 0 0 0.1em var(--main-color);
+	}
 }
 
 button,
