--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -70,3 +70,25 @@
 .jammer_slide{
 	@extend %sliding;
 }
+
+
+@keyframes jammer_blinking{
+	from{ 
+		background-position: center -50%;
+	}
+	to{
+		background-position: center 150%;
+	}
+}
+%blinking{
+	background-image: linear-gradient(90deg,transparent,rgba(255,255,255,0.5) 50%, transparent) !important;
+	background-size:cover;
+	animation-name: jammer_blinking;
+	animation-duration: 1s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	animation-play-state: running;
+}
+.jammer_blinking{
+	@extend %blinking;
+}
