--- a/jammer.strippeddown.css
+++ b/jammer.strippeddown.css
@@ -175,7 +175,7 @@ a {
 }
 
 a:visited {
-  color: var(--button-greyedout);
+  color: var(--main-color-lighter);
 }
 
 a:hover, a:active {
@@ -184,6 +184,18 @@ a:hover, a:active {
 
 a:focus {
   text-decoration: none;
+}
+
+/*a[href^="mailto:"]{
+
+}
+a[download]::after{
+
+}*/
+a[target=_blank]::after {
+  content: "🗗";
+  transform: translate(0, -0.2rem);
+  display: inline-block;
 }
 
 hr {
@@ -836,33 +848,37 @@ input[type=file].dropArea::-webkit-file-upload-button {
 }
 
 input[type=color] {
+  --value: #000000;
+  appearance: none;
   height: 2.5rem;
   padding: 0.35rem;
   cursor: pointer;
-  /*currently not supported*/
-  /*&::after{
-  	content: attr(value);
-      display: block;
-      height: 20px;
-      width: 20px;
-      position: absolute;
-      left: 0;
-      top: 8px;
-      z-index: 2;
-      color: var(--text-base);
-  	content: attr(value);
-  }*/
 }
-input[type=color]::-webkit-color-swatch, input[type=color]::-moz-color-swatch {
-  content: attr(value);
-  border-radius: 0.5rem;
-  height: 1.8rem;
-  display: inline-block;
-  float: left;
-  border: 2px solid var(--button-greyedout);
+input[type=color]::-webkit-color-swatch {
+  display: none;
 }
-input[type=color]:focus::-webkit-color-swatch, input[type=color]:focus::-moz-color-swatch {
+input[type=color]::before {
+  content: "";
+  background: var(--value);
+  position: absolute;
+  width: 1.8em;
+  height: 1.8em;
+  border-radius: 50%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1);
+}
+input[type=color]::after {
+  content: attr(placeholder);
+  color: var(--value);
+  position: absolute;
+  left: 2.5rem;
+  opacity: 0.85;
+  top: 1.1rem;
+}
+input[type=color]:focus::-webkit-color-swatch {
   border-color: var(--main-color);
+}
+input[type=color]:focus::before {
+  color: var(--main-color);
 }
 
 .tagLeft {
