--- a/sass/_inputfields.scss
+++ b/sass/_inputfields.scss
@@ -530,37 +530,45 @@ input[type="file"]{
 }
 
 input[type="color"]{
+	--value: #000000;
+	appearance:none;
 	height: 2.5rem;
 	padding: 0.35rem;
 	cursor:pointer;
 
-	&::-webkit-color-swatch,
-	&::-moz-color-swatch{
-		content:attr(value);
-		border-radius: 0.5rem;
-		height:1.8rem;
-		display:inline-block;
-		float:left;
-		border:2px solid var(--button-greyedout);
+	&::-webkit-color-swatch/*,
+	&::-moz-color-swatch*/{
+		display:none;
 
 	}
-	&:focus::-webkit-color-swatch,
-	&:focus::-moz-color-swatch{
-		border-color: var(--main-color)
+	&::before{
+		content: '';
+		background:var(--value);
+		position:absolute;
+		width: 1.8em;
+		height: 1.8em;
+		border-radius: 50%;
+		box-shadow: 0 1px 1px rgba(0,0,0,0.1),
+					0 2px 2px rgba(0,0,0,0.1)
 	}
-	/*currently not supported*/
-	/*&::after{
-		content: attr(value);
-	    display: block;
-	    height: 20px;
-	    width: 20px;
-	    position: absolute;
-	    left: 0;
-	    top: 8px;
-	    z-index: 2;
-	    color: var(--text-base);
-		content: attr(value);
-	}*/	
+	&::after{
+		content: attr(placeholder);
+		color:var(--value);
+		position: absolute;
+		left: 2.5rem;
+		opacity: 0.85;
+		top: 1.1rem;
+	}
+
+	&:focus{
+		&::-webkit-color-swatch/*,
+		&:focus::-moz-color-swatch*/{
+			border-color: var(--main-color)
+		}
+		&::before{
+			color:var(--main-color);
+		}
+	}
 }
 
 
